# PulseDB

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FlowDB_Documentation.docx  LICENSE  README.md  docker-compose.cluster.yml  docker-compose.yml  flowdb.wal  test_queries.ps1
.github/workflows/: ci.yml
benches/: pulseql.rs
benchmarks/: README.md  common.py  run_all.py
benchmarks/compare/: mongodb_bench.py  postgres_bench.py  pulsedb_bench.py  qdrant_bench.py  redis_bench.py  sqlite_bench.py
clients/go/: README.md  go.mod  orm.go  pool.go  pulsedb.go
clients/javascript/: README.md  example_orm.js  index.js  orm.d.ts  orm.js  package.json  pool.js
clients/python/: README.md  example_orm.py  pyproject.toml  setup.py
clients/python/pulsedb/: __init__.py  orm.py  pool.py
flowdb-data/: audit.snap  docs.snap  flowdb.catalog  follows.snap  items.snap  products.snap  users.snap
src/: auth.rs  error.rs  lib.rs  main.rs  metrics.rs  mvcc.rs  repl.rs  resource.rs  server.rs  transaction.rs  types.rs  wal.rs
src/ai/: mod.rs
src/api/: mod.rs
src/cluster/: mod.rs  raft.rs  replication.rs  shard.rs
src/engine/: evaluator.rs  executor.rs  hnsw.rs  mod.rs  planner.rs  watch.rs
src/graph/: mod.rs
src/sql/: ast.rs  lexer.rs  parser.rs  token.rs
src/storage/: buffer_pool.rs  columnar.rs  disk_store.rs  lsm.rs  mod.rs  persist.rs  table.rs
src/triggers/: mod.rs
tools/: README.md  migrate.py
wix/: LICENSE.rtf  main.wxs
