[package]
name = "pulsedb"
version = "0.2.0"
edition = "2021"
description = "PulseDB — a powerful custom database engine with PulseQL query language"
authors = ["PulseDB Contributors"]
license-file = "LICENSE"
repository = "https://github.com/your-username/pulsedb"
homepage = "https://pulsedb.io"
keywords = ["database", "vector-search", "pulseql", "embedded", "distributed"]
categories = ["database-implementations"]

[lib]
name = "pulsedb"
path = "src/lib.rs"

[[bin]]
name = "pulsedb-server"
path = "src/main.rs"

[[bin]]
name = "pulsedb-repl"
path = "src/repl.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Structured logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# UUID for row IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI argument parsing (for server flags)
clap = { version = "4", features = ["derive"] }

# Cryptographic hashing (auth password storage)
sha2 = "0.10"

# Windows Service support (only compiled on Windows)
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
# Benchmarks / tests
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3"

[[bench]]
name = "pulseql"
harness = false
path = "benches/pulseql.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
