[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsedb"
version = "1.0.0"
description = "Python client and ORM for PulseDB — the fast, self-contained database engine"
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.8"
authors = [
    { name = "Ajaikumar", email = "pulsedb.license@gmail.com" },
]
keywords = ["pulsedb", "database", "orm", "vector-search", "embedded"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
]
dependencies = []   # zero runtime dependencies

[project.urls]
Homepage    = "https://fornexus.tech"
Repository  = "https://github.com/Ajaikumar0712/PulseDB"
"Bug Tracker" = "https://github.com/Ajaikumar0712/PulseDB/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["pulsedb"]
